test/functions/resolution/errors/testBadCallCandidates.4.good
testBadCallCandidates.chpl:45: In function 'main':
testBadCallCandidates.chpl:59: error: unresolved call 'owned C.bar(42)'
testBadCallCandidates.chpl:7: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:59: note: because call actual argument #1 with type int(64)
testBadCallCandidates.chpl:7: note: is passed to formal 'x: string'
testBadCallCandidates.chpl:20: note: candidates are: D.type bar(x: int)
testBadCallCandidates.chpl:39: note:                 bar(x: D)
